# -CUDA-

./: CMakeLists.txt  CMakeLists1.txt  Makefile  README.md  ab  ab.cu  cu_files_documentation.md  header_files_documentation.md  out.txt
include/: BasicFunc.h  FftwToolkit.h  Head.h  Initialization.h  SCFTBaseAB.h  scftData.h  scftVariable.h
src/: BasicFunc.cu  FftwToolkit.cu  Initialization.cu  SCFTBaseAB.cu
